# neuzelaar

./: .gitignore  CLAUDE_TASKS.md  GEMINI_FLASH_TASKS.md  LICENSE-NOTE.md  PLAN.md  README.md  TODO.md  concept_pub_talk.md  name.md  neuzelaar-ui.sh  neuzelaar.sh  pyproject.toml  workdone-gemini-flash.md  workdone.md
chat/: README.md  claude-notes-to-self.md  claude-to-all.md  claude-to-codex.md  claude-to-gemini-flash.md  codex-notes-to-self.md  codex-to-claude.md  codex-to-gemini-flash.md
docs/: config_format.md  deferred_details.md  js_engines.md  js_own.md  js_test_strategy.md  layout_plan.md  milestone_1.md  milestone_2.md  mvp_status.md  projects.md  scripting_handover_2026-04-25.md  scripting_todo.md  settings_ui.md  smoke_tests.md  wpt_plan.md
neuzelaar/: __init__.py  __main__.py  viewer.py
neuzelaar/core/: __init__.py  browser.py  bus.py  diagnostics.py  origin.py  page.py  session.py  watchdog.py
neuzelaar/document/: __init__.py  bfc.py  box.py  dom.py  forms.py  layout.py  links.py  scripts.py  styles.py  subresources.py
neuzelaar/engines/: __init__.py
neuzelaar/render/: __init__.py  display_builder.py  display_list.py  software.py  text_only.py
neuzelaar/shell_api/: __init__.py  commands.py  events.py  frame.py  surface.py
neuzelaar/shells/: __init__.py
tests/: test_guardrails.py
tests/fixtures/: README.md
tests/integration/: test_cli.py  test_fetch_file_fixture.py  test_forms_fixture_server.py  test_html_text_pipeline.py  (+2 more)
tools/: check_guardrails.sh  install_launcher.sh  run_js_test262_subset.py  run_js_wpt_subset.py  setup.sh
(+158 files in other folders)
