[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "neuzelaar"
version = "0.1.0"
description = "Policy-first modular browser experiment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "html5lib",
  "tinycss2",
  "Pillow",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
js = [
  "quickjs",
  "js2py",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neuzelaar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
